--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,4 +2,7 @@
 
     <h1>LOGO</h1>
 </a>
+<form method="GET" action="">
+    <input type="text" placeholder="Enter room name" name="q">
+</form>
 <hr>
