--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    <div>
+        {% if messages %}
+        <div>
+            {% for message in messages %}
+               <h3>{{message}}</h3>
+            {% endfor %}
+        </div>
+        {% endif %}
+    </div>
     {% block content %}
     {% endblock content %}
     
