--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,16 @@
 
     <h1>LOGO</h1>
 </a>
+
 <form method="GET" action="">
     <input type="text" placeholder="Enter room name" name="q">
 </form>
+<div>
+    {% if request.user.is_authenticated %}
+      <span>Hello {{request.user}}</span>
+      <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+      <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+</div>
 <hr>
