--- a/templates/main.html
+++ b/templates/main.html
@@ -1,24 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyBud</title>
-</head>
-<body>
-    {% include 'navbar.html' %}
-    <div>
-        {% if messages %}
-        <div>
-            {% for message in messages %}
-               <h3>{{message}}</h3>
-            {% endfor %}
-        </div>
-        {% endif %}
-    </div>
-    {% block content %}
-    {% endblock content %}
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
+
+  <body>
+     {% include 'navbar.html' %}
+     {% block content %}
+     {% endblock content %}
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
