--- a/templates/base/feed_component.html
+++ b/templates/base/feed_component.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="roomListRoom__content">
-        <a href="room.html">{{room.name}}</a>
+        <a href="{% url 'room' room.id %}">{{room.name}}</a>
         <p>
           {{room.description}}
         </p>
