--- a/templates/main.html
+++ b/templates/main.html
@@ -12,6 +12,15 @@
 
   <body>
      {% include 'navbar.html' %}
+     <div>
+      {% if messages %}
+      <div>
+          {% for message in messages %}
+             <h3>{{message}}</h3>
+          {% endfor %}
+      </div>
+      {% endif %}
+  </div>
      {% block content %}
      {% endblock content %}
     <script src="{% static 'js/script.js' %}"></script>
