--- a/templates/base/feed_component.html
+++ b/templates/base/feed_component.html
@@ -21,7 +21,7 @@
         <h2>Study Room</h2>
         <p>{{rooms.count}} Rooms available</p>
       </div>
-      <a class="btn btn--main" href="create-room.html">
+      <a class="btn btn--main" href="{% url 'create-room' %}">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
           <title>add</title>
           <path
@@ -34,7 +34,7 @@
     {% for room in rooms %}
     <div class="roomListRoom">
       <div class="roomListRoom__header">
-        <a href="profile.html" class="roomListRoom__author">
+        <a href="{% url 'profile' room.host.id %}" class="roomListRoom__author">
           <div class="avatar avatar--small">
             <img src="https://randomuser.me/api/portraits/women/11.jpg" />
           </div>
@@ -67,7 +67,7 @@
               d="M12 16c3.859 0 7-3.141 7-7s-3.141-7-7-7c-3.859 0-7 3.141-7 7s3.141 7 7 7zM12 4c2.757 0 5 2.243 5 5s-2.243 5-5 5-5-2.243-5-5c0-2.757 2.243-5 5-5z"
             ></path>
           </svg>
-          5.3k Joined
+          {{room.participants.count}} Joined
         </a>
         <p class="roomListRoom__topic">{{room.topic.name}}</p>
       </div>
