--- a/templates/base/room_form.html
+++ b/templates/base/room_form.html
@@ -5,7 +5,7 @@
       <div class="layout__box">
         <div class="layout__boxHeader">
           <div class="layout__boxTitle">
-            <a href="index.html">
+            <a href="{% url 'home' %}">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                 <title>arrow-left</title>
                 <path
@@ -17,33 +17,34 @@
           </div>
         </div>
         <div class="layout__body">
-          <form class="form" action="#">
+          <form class="form" action="" method="POST">
+            {% csrf_token%}
             <div class="form__group">
               <label for="room_name">Room Name</label>
-              <input id="room_name" name="room_name" type="text" placeholder="E.g. Mastering Python + Django" />
+              {{form.name}}
             </div>
 
             <div class="form__group">
               <label for="room_topic">Topic</label>
-              <input required type="text" name="topic" id="room_topic" list="topic-list" />
+              <input required type="text" name="topic" id="room_topic" list="topic-list" value="{{room.topic.name}}"/>
               <datalist id="topic-list">
+                {% for topic in topics %}
                 <select id="room_topic">
-                  <option value="">Select your topic</option>
-                  <option value="Python">Python</option>
-                  <option value="Django">Django</option>
+                  <option value="{{topic.name}}"></option>
                 </select>
+                {% endfor %}
               </datalist>
 
             </div>
 
 
             <div class="form__group">
-              <label for="room_about">About</label>
-              <textarea name="room_about" id="room_about" placeholder="Write about your study group..."></textarea>
+              <label for="room_description">Description</label>
+              {{form.description}}
             </div>
             <div class="form__action">
-              <a class="btn btn--dark" href="index.html">Cancel</a>
-              <button class="btn btn--main" type="submit">Create Room</button>
+              <a class="btn btn--dark" href="{% url 'home' %}">Cancel</a>
+              <button class="btn btn--main" type="submit">Submit</button>
             </div>
           </form>
         </div>
