--- a/templates/base/profile.html
+++ b/templates/base/profile.html
@@ -11,13 +11,13 @@
         <div class="profile">
           <div class="profile__avatar">
             <div class="avatar avatar--large active">
-              <img src="https://randomuser.me/api/portraits/men/11.jpg" />
+              <img src="{{user.avatar.url}}" />
             </div>
           </div>
           <div class="profile__info">
-            <h3>{{user}}</h3>
-            <p>@{{user}}</p>
-            <a href="edit-user.html" class="btn btn--main btn--pill">Edit Profile</a>
+            <h3>{{user.name}}</h3>
+            <p>@{{user.username}}</p>
+            <a href="{% url 'edit-user' %}" class="btn btn--main btn--pill">Edit Profile</a>
           </div>
           <div class="profile__about">
             <h3>About</h3>
@@ -31,7 +31,7 @@
 
         <div class="roomList__header">
           <div>
-            <h2>Study Rooms Hosted by {{user}}</a>
+            <h2>Study Rooms Hosted by {{user}}
             </h2>
           </div>
         </div>
@@ -40,7 +40,7 @@
           <div class="roomListRoom__header">
             <a href="{% url 'profile' room.host.id %}" class="roomListRoom__author">
               <div class="avatar avatar--small active">
-                <img src="https://randomuser.me/api/portraits/men/11.jpg" />
+                <img src="{{room.host.avatar.url}}" />
               </div>
               <span>@{{room.host.username}}</span>
             </a>
