--- a/templates/base/login_register.html
+++ b/templates/base/login_register.html
@@ -61,7 +61,7 @@
                 {{field}}
               </div>
                {% endfor %}
-               <!-- <button class="btn btn--main" type="submit">
+               <button class="btn btn--main" type="submit">
                 <svg
                   version="1.1"
                   xmlns="http://www.w3.org/2000/svg"
@@ -79,8 +79,8 @@
                 </svg>
       
                Register
-              </button> -->
-              <button class="btn btn--main" type="submit">Register</button>
+              </button>
+             
             </form>
             <span>Already Signed UP?</span>
             <a href="{% url 'login' %}">Login</a>
