--- a/templates/base/activity_component.html
+++ b/templates/base/activity_component.html
@@ -15,7 +15,8 @@
           </p>
         </a>
         <div class="roomListRoom__actions">
-          <a href="#">
+          {% if request.user == message.user %}
+          <a href="{% url 'delete-message' message.id %}">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>remove</title>
               <path
@@ -23,6 +24,7 @@
               ></path>
             </svg>
           </a>
+          {% endif %}
         </div>
       </div>
       <div class="activities__boxContent">
